--- a/app/src/main/res/values-night/splash.xml
+++ b/app/src/main/res/values-night/splash.xml
@@ -2,7 +2,7 @@
 <resources>
     <style name="Theme.BlazeQz.MySplash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/black</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/aapp_iccon</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_screen_icon</item>
         <item name="postSplashScreenTheme">@style/Theme.BlazeQz</item>
     </style>
 </resources>
